--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Varela+Round&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -7,12 +9,22 @@
 body {
   height: 100vh;
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-color: #36bdbd;
+  color: white;
+  font-family: "Varela Round";
+}
+
+h1 {
+  font-size: 40px;
+  margin-top: 30px;
 }
 
 .memory-game {
-  width: 640px;
-  height: 640px;
+  width: 550px;
+  height: 550px;
   margin: auto;
   display: flex;
   flex-wrap: wrap;
