--- a/style.css
+++ b/style.css
@@ -7,19 +7,32 @@
 }
 
 body {
-  height: 100vh;
+  height: 100%;
+  margin: 0px;
+  background-color: #36bdbd;
+  color: white;
+  font-family: "Varela Round";
+
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #36bdbd;
-  color: white;
-  font-family: "Varela Round";
+}
+
+.container {
+  width: 100vw;
+  height: 100vh;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 h1 {
   font-size: 40px;
   margin-top: 30px;
+  text-align: center;
 }
 
 .memory-game {
@@ -66,4 +79,34 @@ h1 {
 /* Flip Card Animation */
 .card.flip {
   transform: rotateY(180deg);
+}
+
+@media only screen and (min-width: 350px) and (max-width: 549px) {
+  h1 {
+    font-size: 30px;
+  }
+
+  .container-title {
+    width: 100%;
+  }
+
+  .memory-game {
+    width: 100%;
+    height: 400px;
+  }
+}
+
+@media only screen and (min-width: 280px) and (max-width: 349px) {
+  h1 {
+    font-size: 30px;
+  }
+
+  .container-title {
+    width: 100%;
+  }
+
+  .memory-game {
+    width: 100%;
+    height: 280px;
+  }
 }
